Semana 4 - Aula 1 - Parte 5

--- a/style.css
+++ b/style.css
@@ -19,3 +19,28 @@ p, h1{
 em strong {
     color: red;
 }
+
+.itens {
+    font-style: italic
+}
+
+.beneficios {
+    background: #ffffff;
+    padding: 20px;
+}
+
+h2{
+    text-align: center;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagembeneficios{
+    width: 50%;
+
+}
