--- a/style.css
+++ b/style.css
@@ -6,8 +6,15 @@ body{
     width: 100%;
 }
 
+.titulo-principal{
+    padding-left: 20px;
+}
 
-p, h1{
+.titulo-centralizado {
+    text-align: center;    
+}
+
+p {
     text-align: center;
     
 }
@@ -27,10 +34,6 @@ em strong {
 .beneficios {
     background: #ffffff;
     padding: 20px;
-}
-
-h2{
-    text-align: center;
 }
 
 ul{
