--- a/Semana4_Curso2/style.css
+++ b/Semana4_Curso2/style.css
@@ -1,49 +1,19 @@
-body{
-    background: #cccccc;
-    }
-
-#banner{
-    width: 100%;
+header {
+    background: #BBBBBB;
 }
 
-.titulo-principal{
-    padding-left: 20px;
+nav li {
+    display: inline;
+    margin: 0 0 0 15;
 }
 
-.titulo-centralizado {
-    text-align: center;    
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
 
-p {
-    text-align: center;
-    
-}
 
-#missao{
-    font-size: 20px;
-}
 
-em strong {
-    color: red;
-}
-
-.itens {
-    font-style: italic
-}
-
-.beneficios {
-    background: #ffffff;
-    padding: 20px;
-}
-
-ul{
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
-}
-
-.imagembeneficios{
-    width: 50%;
-
-}
